Updated configuration file for ci/cd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=SilentWhisperer
 
 spring.web.resources.static-locations=classpath:/static/
+
+spring.profiles.default=dev
+
+server.port=5000
