--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,4 +8,5 @@ phases:
       - mvn clean package  # Compile the project and package it as a JAR
 artifacts:
   files:
-    - target/*.jar        # Specify the output JAR file(s) to upload as artifacts
+    - target/SilentWhisperer.jar        # Specify the output JAR file(s) to upload as artifacts
+  discard-paths: yes
